--- a/deploy/frontend/Dockerfile
+++ b/deploy/frontend/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:lts-alpine as builder
-COPY /frontend/package.json /package.json
-COPY /frontend/package-lock.json /package-lock.json
+COPY frontend/package.json /package.json
+COPY frontend/package-lock.json /package-lock.json
 RUN npm install --registry https://registry.npm.taobao.org
 COPY /frontend /
 RUN npm run build
