--- a/deploy/backend/Dockerfile
+++ b/deploy/backend/Dockerfile
@@ -1,5 +1,5 @@
 FROM node:lts-alpine
-COPY /backend/package.json /package.json
-COPY /backend/package-lock.json /package-lock.json
+COPY backend/package.json /package.json
+COPY backend/package-lock.json /package-lock.json
 RUN npm install --registry https://registry.npm.taobao.org
 COPY /backend /
