--- a/deploy/frontend/Dockerfile
+++ b/deploy/frontend/Dockerfile
@@ -6,6 +6,7 @@ COPY /frontend /
 RUN npm run build
 
 FROM nginx:alpine
+WORKDIR /
 COPY deploy/frontend/site.conf /etc/nginx/conf.d/
 COPY deploy/frontend/entry_point.sh /
 COPY --from=builder /dist /dist
