--- a/deploy/frontend/site.template
+++ b/deploy/frontend/site.template
@@ -14,7 +14,7 @@ server {
         rewrite /api/(.+)$ /$1 break;
         proxy_set_header   X-real-ip $remote_addr;
         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_pass http://dockerhost:3033;
+        proxy_pass $BACKEND_URL;
     }
     location / {
         try_files $uri $uri/ /index.html;
